@@ -1,3 +1,7 @@
+2012-11-29  Roland McGrath  <mcgrathr@google.com>
+
+	* elf-nacl.c (segment_eligible_for_headers): Disallow writable segments.
+
 2012-11-26  Roland McGrath  <mcgrathr@google.com>
 
 	* elf-nacl.c (nacl_modify_segment_map): Don't crash when INFO is null.
